# saorsa-pqc

./: .gitignore  CHANGELOG.md  Cargo.toml  ML_DSA_65_ARCHITECTURE.md  ML_DSA_65_IMPLEMENTATION_SUMMARY.md  README.md  memory_pool_complete_fix.rs  mutants.toml  temp_config_fix.patch  test_fips_basic.rs
.claude/: settings.json
.github/: .trigger
.github/workflows/: quick-check.yml  test.yml
benches/: comprehensive_benchmarks.rs  ml_dsa_benchmarks.rs  ml_kem_benchmarks.rs
docs/: ARCHITECTURE.md
examples/: hkdf_key_derivation.rs  quantum_secure_communication.rs
scripts/: download_test_vectors.sh
src/: lib.rs  raw_keys.rs  raw_public_keys.rs  symmetric.rs
src/api/: aead.rs  dsa.rs  errors.rs  hash.rs  hmac.rs  hpke.rs  kdf.rs  kem.rs  mod.rs  sig.rs  slh.rs  symmetric.rs  traits.rs
src/pqc/: README.md  benchmarks.rs  combiners.rs  config.rs  constant_time.rs  encryption.rs  hybrid.rs  kem_impl.rs  memory_pool.rs  ml_dsa.rs  ml_dsa_44.rs  ml_dsa_87.rs  ml_dsa_impl.rs  ml_kem.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_impl.rs  mod.rs  parallel.rs  security_validation.rs  sig_impl.rs  traits.rs  types.rs
src/pqc/ml_dsa_65/: algorithms.rs  benchmarks.rs  constant_time.rs  encoding.rs  memory.rs  mod.rs  ntt.rs  params.rs  polynomial.rs  sampling.rs  tests.rs  validation.rs
tests/: api_comprehensive.rs  basic_tests.rs  chacha20_poly1305_vectors.rs  extended_crypto_vectors.rs  fips_basic.rs  hkdf_integration.rs  memory_stress_tests.rs  ml_dsa_tests.rs  ml_kem_tests.rs  mutation_tests.rs  nist_official_vectors.rs  nist_test_vectors.rs  pqc_traits_tests.rs  property_tests.rs  security_enhancement_tests.rs  security_tests.rs  validation_tests.rs
tests/common/: mod.rs
tests/nist_vectors/community/: ml_kem_768_golden.json
